# openspot_node

./: .devcontainer.json  CMakeLists.txt  README.md  package.xml
.devcontainer/: devcontainer.json
.github/workflows/: devel.yml  release.yml
dockerfiles/: .devcontainer.json  deploy.Dockerfile  devel.Dockerfile  entrypoint.sh  spotng.deb
include/openspot/: consts.h  drive.h  imu.h  leg.h  spi.h  yesense.h
src/: drive.cc  imu.cc  leg.cc  main.cc  spi.cc  yesense.cc
urdf/: openspot.urdf
